# twitcher

./: LICENSE  README.md  main.go  stack.yaml  twitcher.cabal
Godeps/: Godeps.json
app/: Main.hs
app/Twitcher/: Table.hs  Twitch.hs
config/: config.go
src/: Twitcher.hs
twitch/: twitch.go
util/: util.go
