name:                twitcher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/twitcher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable twitcher
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions: OverloadedStrings
  build-depends:       base
                     , aeson
                     , wreq
                     , lens
                     , time
                     , text
                     , exceptions
                     , bytestring
                     , optparse-applicative
                     , mtl
                     , either
                     , process
  other-modules: Twitcher.Twitch
  default-language:    Haskell2010

test-suite twitcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twitcher
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/twitcher
